# Reversi

./: .gitignore
Reversi/: CMakeLists.txt
